--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,28 +7,28 @@ before:
     - go mod tidy
 builds:
   - id: casaos-user-service-amd64
-    binary: build/usr/bin/casaos-user-service
+    binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=x86_64-linux-gnu-gcc-10
+      - CC=x86_64-linux-gnu-gcc-11
     goos:
       - linux
     goarch:
       - amd64
   - id: casaos-user-service-arm64
-    binary: build/usr/bin/casaos-user-service
+    binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=aarch64-linux-gnu-gcc-10
+      - CC=aarch64-linux-gnu-gcc-11
     goos:
       - linux
     goarch:
       - arm64
   - id: casaos-user-service-arm-7
-    binary: build/usr/bin/casaos-user-service
+    binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=arm-linux-gnueabihf-gcc-10
+      - CC=arm-linux-gnueabihf-gcc-11
     goos:
       - linux
     goarch:
@@ -36,31 +36,31 @@ builds:
     goarm:
       - 7
   - id: casaos-user-service-migration-tool-amd64
-    binary: build/usr/bin/casaos-user-service-migration-tool
+    binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=x86_64-linux-gnu-gcc-10
+      - CC=x86_64-linux-gnu-gcc-11
     goos:
       - linux
     goarch:
       - amd64
   - id: casaos-user-service-migration-tool-arm64
-    binary: build/usr/bin/casaos-user-service-migration-tool
+    binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=aarch64-linux-gnu-gcc-10
+      - CC=aarch64-linux-gnu-gcc-11
     goos:
       - linux
     goarch:
       - arm64
   - id: casaos-user-service-migration-tool-arm-7
-    binary: build/usr/bin/casaos-user-service-migration-tool
+    binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=arm-linux-gnueabihf-gcc-10
+      - CC=arm-linux-gnueabihf-gcc-11
     goos:
       - linux
     goarch:
@@ -87,7 +87,7 @@ archives:
     replacements:
       arm: arm-7
     files:
-      - build/**/*
+      - build/sysroot/etc/**/*
 checksum:
   name_template: 'checksums.txt'
 snapshot:
