--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,13 @@ builds:
     binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=x86_64-linux-gnu-gcc-11
+      - CC=x86_64-linux-gnu-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
@@ -19,7 +25,13 @@ builds:
     binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=aarch64-linux-gnu-gcc-11
+      - CC=aarch64-linux-gnu-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
@@ -28,19 +40,31 @@ builds:
     binary: build/sysroot/usr/bin/casaos-user-service
     env:
       - CGO_ENABLED=1
-      - CC=arm-linux-gnueabihf-gcc-11
+      - CC=arm-linux-gnueabihf-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
       - arm
     goarm:
-      - 7
+      - "7"
   - id: casaos-user-service-migration-tool-amd64
     binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=x86_64-linux-gnu-gcc-11
+      - CC=x86_64-linux-gnu-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
@@ -50,7 +74,13 @@ builds:
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=aarch64-linux-gnu-gcc-11
+      - CC=aarch64-linux-gnu-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
@@ -60,13 +90,19 @@ builds:
     main: ./cmd/migration-tool
     env:
       - CGO_ENABLED=1
-      - CC=arm-linux-gnueabihf-gcc-11
+      - CC=arm-linux-gnueabihf-gcc
+    ldflags:
+      - -s
+      - -w
+      - -extldflags "-static"
+    tags:
+      - netgo
     goos:
       - linux
     goarch:
       - arm
     goarm:
-      - 7
+      - "7"
 archives:
   - name_template: "{{ .Os }}-{{ .Arch }}-{{ .ProjectName }}-v{{ .Version }}"
     id: casaos-user-service
