--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,6 +16,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
@@ -31,6 +32,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
@@ -46,6 +48,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
@@ -64,6 +67,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
@@ -80,6 +84,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
@@ -96,6 +101,7 @@ builds:
       - -w
       - -extldflags "-static"
     tags:
+      - musl
       - netgo
     goos:
       - linux
