--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,6 +3,7 @@
 project_name: casaos-user-service
 before:
   hooks:
+    - go run github.com/google/go-licenses@latest check . --disallowed_types=restricted
     - go mod tidy
     - go test -v ./...
 builds:
