--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -134,7 +134,7 @@ archives:
 checksum:
   name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ incpatch .Version }}-snapshot"
+  name_template: "{{ incpatch .Version }}"
 changelog:
   sort: asc
   filters:
