--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -151,7 +151,7 @@ archives:
     files:
       - build/**/*
   - name_template: >-
-      {{ .Os }}-{{- if eq .Arch "arm" }}arm-7{{- else }}{{ .Arch }}{{- end }}-{{ .ProjectName }}-v{{ .Version }}
+      {{ .Os }}-{{- if eq .Arch "arm" }}arm-7{{- else }}{{ .Arch }}{{- end }}-{{ .ProjectName }}-migration-tool-v{{ .Version }}
     id: casaos-user-service-migration-tool
     builds:
       - casaos-user-service-migration-tool-amd64
