Add riscv64 support

--- a/.goreleaser.debug.yaml
+++ b/.goreleaser.debug.yaml
@@ -58,6 +58,22 @@ builds:
       - arm
     goarm:
       - "7"
+  - id: casaos-user-service-riscv64
+    binary: build/sysroot/usr/bin/casaos-user-service
+    env:
+      - CC=riscv64-linux-gnu-gcc
+    gcflags:
+      - all=-N -l
+    ldflags:
+      - -extldflags "-static"
+    tags:
+      - musl
+      - netgo
+      - osusergo
+    goos:
+      - linux
+    goarch:
+      - riscv64
   - id: casaos-user-service-migration-tool-amd64
     binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
     main: ./cmd/migration-tool
@@ -111,6 +127,23 @@ builds:
       - arm
     goarm:
       - "7"
+  - id: casaos-user-service-migration-tool-riscv64
+    binary: build/sysroot/usr/bin/casaos-user-service-migration-tool
+    main: ./cmd/migration-tool
+    env:
+      - CC=riscv64-linux-gnu-gcc
+    gcflags:
+      - all=-N -l
+    ldflags:
+      - -extldflags "-static"
+    tags:
+      - musl
+      - netgo
+      - osusergo
+    goos:
+      - linux
+    goarch:
+      - riscv64
 archives:
   - name_template: "{{ .Os }}-{{ .Arch }}-{{ .ProjectName }}-v{{ .Version }}"
     id: casaos-user-service
@@ -118,6 +151,7 @@ archives:
       - casaos-user-service-amd64
       - casaos-user-service-arm64
       - casaos-user-service-arm-7
+      - casaos-user-service-riscv64
     replacements:
       arm: arm-7
     files:
@@ -128,6 +162,7 @@ archives:
       - casaos-user-service-migration-tool-amd64
       - casaos-user-service-migration-tool-arm64
       - casaos-user-service-migration-tool-arm-7
+      - casaos-user-service-migration-tool-riscv64
     replacements:
       arm: arm-7
     files:
